Fix: grid index title center display when too long

--- a/npm/src/style/_index.scss
+++ b/npm/src/style/_index.scss
@@ -167,6 +167,7 @@
   @include typography.typography(subtitle1);
   font-size: 1.5rem;
   margin: 0.5rem 0 0.1rem 0;
+  text-align: left
 }
 
 .grid-index-date {
